---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: struct_access_mut.cm
============================================================
Source code:

// Tests writing a value to a struct field.
struct Point {
    x: felt,
    y: felt,
}

fn test() -> felt {
    let p = Point { x: 10, y: 20 };
    p.y = 30; // Should generate getelementptr followed by a store.
    return p.y;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test {
    entry: 0

    0:
      return 30

  }

}
